src/test/fail/invalid_class_prop_name.lly
#[
SyntaxError: Class properties must start with @.
Where: File "test/fail/invalid_class_prop_name.lly" at line 6
]#

class ABC() { var a: integer }
